// SPDX-FileCopyrightText: 2025 Shun Sakai
//
// SPDX-License-Identifier: CC-BY-4.0

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/randgen
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.4\...HEAD[Unreleased]

=== Added

* Add demo animation ({pull-request-url}/29[#29])
* Change the license for documents and assets to CC BY 4.0
  ({pull-request-url}/41[#41])

== {compare-url}/v0.1.3\...v0.1.4[0.1.4] - 2025-03-25

=== Changed

* Change this option to be ignored when the generated bytes are output to a
  terminal/tty ({pull-request-url}/25[#25])

== {compare-url}/v0.1.2\...v0.1.3[0.1.3] - 2025-03-24

=== Added

* Add `--progress` option ({pull-request-url}/20[#20])

=== Changed

* Change the buffer capacity when output is small ({pull-request-url}/17[#17])

== {compare-url}/v0.1.1\...v0.1.2[0.1.2] - 2025-03-22

=== Changed

* Change the buffer capacity ({pull-request-url}/14[#14])

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2025-03-11

=== Added

* Supports encoding the generated bytes as URL-safe base64
  ({pull-request-url}/7[#7])

=== Fixed

* Fix broken pipe error when piping ({pull-request-url}/5[#5])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2025-03-10

=== Added

* Initial release