@@ -4,7 +4,7 @@
 
 = randgen(1)
 // Specify in UTC.
-:docdate: 2025-03-25
+:docdate: 2025-05-12
 :revnumber: 0.1.4
 :doctype: manpage
 :icons: font
@@ -265,8 +265,7 @@ terminal/tty.
 
 *-V*, *--version*::
 
-  Print version number. The long flag (*--version*) will also print the
-  copyright notice, the license notice and where to report bugs.
+  Print version number.
 
 *--generate-completion* _SHELL_::
 
