@@ -8,34 +8,8 @@ use byte_unit::Byte;
 use clap::{CommandFactory, Parser, ValueEnum};
 use clap_complete::Generator;
 
-const LONG_VERSION: &str = concat!(
-    env!("CARGO_PKG_VERSION"),
-    '\n',
-    "Copyright (C) 2025 Shun Sakai\n",
-    '\n',
-    "This program is distributed under the terms of either the Apache License 2.0 or\n",
-    "the MIT License.\n",
-    '\n',
-    "This is free software: you are free to change and redistribute it. There is NO\n",
-    "WARRANTY, to the extent permitted by law.\n",
-    '\n',
-    "Report bugs to <https://github.com/sorairolake/randgen/issues>."
-);
-
-const AFTER_LONG_HELP: &str = concat!(
-    "The generated bytes will be output to standard output.\n",
-    '\n',
-    "See `randgen(1)` for more details."
-);
-
 #[derive(Debug, Parser)]
-#[command(
-    version,
-    long_version(LONG_VERSION),
-    about,
-    max_term_width(100),
-    after_long_help(AFTER_LONG_HELP)
-)]
+#[command(version, about, max_term_width(100))]
 pub struct Opt {
     /// Output in the specified output format.
     #[arg(
