@@ -1,3 +1,0 @@
-The generated bytes will be output to standard output.
-
-See `randgen(1)` for more details.
