@@ -1,9 +1,0 @@
-Copyright (C) 2025 Shun Sakai
-
-This program is distributed under the terms of either the Apache License 2.0 or
-the MIT License.
-
-This is free software: you are free to change and redistribute it. There is NO
-WARRANTY, to the extent permitted by law.
-
-Report bugs to <https://github.com/sorairolake/randgen/issues>.
