@@ -1,3 +1,0 @@
-SPDX-FileCopyrightText: 2025 Shun Sakai
-
-SPDX-License-Identifier: CC-BY-4.0
