@@ -22,6 +22,13 @@ project adheres to https://semver.org/[Semantic Versioning].
 * Change the license for documents and assets to CC BY 4.0
   ({pull-request-url}/41[#41])
 
+=== Changed
+
+* Remove help text for after auto-generated `--help`
+  ({pull-request-url}/51[#51])
+* Make the message for `--version` the same as the message for `-V`
+  ({pull-request-url}/51[#51])
+
 == {compare-url}/v0.1.3\...v0.1.4[0.1.4] - 2025-03-25
 
 === Changed
